--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div id="menus">
       <span>Display results:</span>
       <span id="number_of_results_menu"></span>
+
+      <span>Select location:</span>
+      <span id="location_menu"></span>
     </div>
     <svg width="1200" height="700"></svg>
 
