--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>Forbidden Authors</h1>
-    <div id="country-info"></div>
-
-    <div id="menus">
-      <span>Display results:</span>
-      <span id="number_of_results_menu"></span>
-
-      <span>Select location:</span>
-      <span id="location_menu"></span>
-    </div>
-    <svg width="1200" height="700"></svg>
+    <header>
+      <h1>Forbidden Library</h1>
+      <a href="index.html">Explore censored books around the world</a>
+      <a href="authors.html">Check the most censored Authors</a>
+      <a href="map.html">Compare censorship in different countries </a>
+    </header>
 
     <!-- <ul class="legend">
       <li class="legend-item" data-difficulty="Easy">
@@ -36,7 +31,5 @@
     </div> -->
 
     <div id="tooltip"></div>
-
-    <script src="./js/index.js" type="module"></script>
   </body>
 </html>
