--- a/map.html
+++ b/map.html
@@ -5,22 +5,48 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/topojson@3.0.2/dist/topojson.min.js"></script>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/map.css" />
   </head>
+
+  <header>
+    <div>
+      <a class="page_title">Forbidden Library</a>
+      <a href="index.html">The most banned books</a>
+      <a href="authors.html">The most censored Authors</a>
+      <a href="map.html">Censorship in different countries </a>
+    </div>
+  </header>
   <body>
-    <h1>Forbidden Authors</h1>
     <div id="country-info"></div>
 
-    <div id="menus">
+    <!-- <div id="menus">
       <span>Display results:</span>
       <span id="number_of_results_menu"></span>
 
       <span>Select location:</span>
       <span id="location_menu"></span>
+    </div> -->
+    <div class="filters">
+      <span>
+        <label for="location_menu">Select locations:</label>
+        <span id="location_menu"></span>
+      </span>
+      <span class="selected-options">
+        <span>Filters:</span>
+      </span>
     </div>
-    <svg width="960" height="480"></svg>
-    <svg width="960" height="300" class="lineGraph"></svg>
+    <div id="graphs_container">
+      <div id="map_container">
+        <h3>Total number of banned volumes in history by country</h3>
+        <svg width="960" height="480"></svg>
+      </div>
+      <div id="line_container">
+        <h3 id="line_title">Number of books banned over the years</h3>
+        <svg width="300" height="600" class="lineGraph"></svg>
+      </div>
 
-    <div id="tooltip"></div>
+      <div id="tooltip"></div>
+    </div>
 
     <script src="./js/mapView/index.js" type="module"></script>
   </body>
