feat: added filter functionality

--- a/authors.html
+++ b/authors.html
@@ -29,6 +29,7 @@
       </span>
     </div>
     <svg width="1400" height="700"></svg>
+    <!-- <svg width="500" height="700"></svg> -->
 
     <div id="tooltip"></div>
 
