feat: added author filter

--- a/authors.html
+++ b/authors.html
@@ -24,12 +24,22 @@
 
       <span>Select location:</span>
       <span id="location_menu"></span>
-      <span class="selected-options">
-        <span>Filters:</span>
+
+      <span>Choose author:</span>
+      <span id="author_menu"></span>
+      
       </span>
     </div>
-    <svg width="1400" height="700"></svg>
-    <!-- <svg width="500" height="700"></svg> -->
+    <div id="graphs_container">
+      <div id="map_container">
+    <svg width="900" height="700"></svg>
+      </div>
+    <div id="line_container">
+      <div id="book_info">  </div>
+      <div>
+      <svg width="500" height="200" class="legendSvg"></svg>
+    </div>
+  </div>
 
     <div id="tooltip"></div>
 
