cleaned the code

--- a/authors.html
+++ b/authors.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Forbidden Library</title>
-    <link rel="icon" type="image/png" href="css/icon.png" />
+    <link rel="icon" type="image/png" href="images/icon.png" />
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/topojson@3.0.2/dist/topojson.min.js"></script>
     <link rel="stylesheet" href="./css/styles.css" />
